editing workflow job for releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,3 +103,17 @@ jobs:
         with:
           name: NoteSquirrel-macos-aarch64
           path: target/aarch64-apple-darwin/release/NoteSquirrel
+
+  release:
+    name: Create Release
+    needs: [build-linux, build-windows, build-macos-intel, build-macos-arm]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: artifacts/
+
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/**/*
